# scrappy_robot

./: README.md
scrappy_base/: CMakeLists.txt  package.xml  setup.py
scrappy_base/launch/: base.launch
scrappy_base/scripts/: scrappy_core.py
scrappy_base/src/: scrappy_core.py
scrappy_base/src/scrappy_base/: speed_controller.py
scrappy_bringup/: CMakeLists.txt  package.xml
scrappy_bringup/config/: 99-scrappy.rules
scrappy_bringup/scripts/: setup_udev_rules
scrappy_control/: CMakeLists.txt  package.xml
scrappy_control/config/: teleop_ps4.yaml
scrappy_control/launch/: teleop.launch
scrappy_robot/: CMakeLists.txt  package.xml
