<?xml version="1.0"?>
<package format="2">
  <name>scrappy_base</name>
  <version>0.0.1</version>
  <description>Scrappy robot base drivers.</description>

  <maintainer email="jorge.ribeiro@todo.todo">Jorge Pais Ribeiro</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/jmspribeiro/scrappy_robot</url>
  <url type="bugtracker">https://github.com/jmspribeiro/scrappy_robot/issues</url>
  <url type="repository">https://github.com/jmspribeiro/scrappy_robot/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <!--<exec_depend>rpi_gpio_bts7960</exec_depend>-->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
