<?xml version="1.0"?>
<package format="2">
  <name>scrappy_bringup</name>
  <version>0.0.1</version>
  <description>Scrappy robot installation and integration package.</description>

  <maintainer email="jorge.ribeiro@todo.todo">Jorge Pais Ribeiro</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/jmspribeiro/scrappy_robot</url>
  <url type="bugtracker">https://github.com/jmspribeiro/scrappy_robot/issues</url>
  <url type="repository">https://github.com/jmspribeiro/scrappy_robot/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
